fixed header overflow in user detail page

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -197,11 +197,13 @@ nav + .container {
 }
 
 #warbler-hero {
-  height: 360px;
+  height: 260px;
   margin-top: -16px;
   opacity: 0.7;
   background-size: cover;
-  background-position: top center;
+  background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 
 .full-width {
@@ -330,7 +332,8 @@ nav + .container {
 }
 
 .card-hero {
-  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
   position: absolute;
   top: 0;
   right: 0;
@@ -369,6 +372,7 @@ nav + .container {
 
 .image-wrapper {
   width: 100%;
+  height: inherit;
   padding-bottom: 36%;
   position: relative;
   overflow: hidden;
